@@ -210,7 +210,7 @@ public class HappyGhastEntity extends AnimalEntity implements ClientVehicle {
     }
 
     @Override
-    public boolean isClientControlled() {
+    public boolean shouldSimulateMovement() {
         if (!hasBodyArmor() || staysStill) {
             return false;
         }
@@ -219,7 +219,7 @@ public class HappyGhastEntity extends AnimalEntity implements ClientVehicle {
     }
 
     private Entity getFirstPassenger() {
-        return passengers.isEmpty() ? null : passengers.get(0);
+        return passengers.isEmpty() ? null : passengers.getFirst();
     }
 
     @Override
